[package]
name = "TimeServe"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.139", features = ["derive"] }
surf = "2.3.2"
chrono = "0.4.19"
nix = "0.24.1"

[profile.release]
panic = "abort"
# strip = true
